--- a/calculadora.css
+++ b/calculadora.css
@@ -1,97 +1,72 @@
 *{
+    font-family: 'Roboto', sans-serif;
+}
 
+h1{
+    color: white;
 }
 
 #calculadora{
-    width: 500px;
+    width: 426px;
     margin: auto;
-    /* padding: 5px; */
     background-color: #d8d8d8;
     border: 1px solid #969696;
     border-radius: 22px;
     max-width: 1000px;
-    height: 570px;
+    height: 560px;
 }
-
 
 
 #operaciones{
     background-color: white;
-    width: 400px;
+    width: 330px;
     height: 50px;
-    margin:10px auto;
+    margin:auto;
     text-align: right;
     padding: 20px;
     border: 1px solid;
     border-radius: 10px;
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 20px;
+    box-shadow: 5px 5px 5px #969696;
 }
-
-.numero{
-    background-color: white;
-    /* float: left; */
-    width: 80px;
-    border: 1px solid;
-    text-align: center;
-    border-radius: 10px;
-    height: 70px;
-    /* margin: 10px; */
-}
-
-.signo{
-    background-color: white;
-    border: 1px solid;
-    text-align: center;
-    width: 80px;
-    height: 70px;
-    border-radius: 10px;
-    /* margin: 10px 0px 10px 0; */
-    /* float: left; */
-}
-
-.decimal{
-    background-color: white;
-    border: 1px solid;
-    width: 80px;
-    text-align: center;
-    border-radius: 10px;
-    height: 70px;
-    /* margin: auto 10px; */
-    /* float: left; */
-}
-
-.igual{
-    background-color: white;
-    width: 80px;
-    border: 1px solid;
-    text-align: center;
-    border-radius: 10px;
-    height: 70px;
-    /* margin: auto 10px; */
-    /* float: left; */
-}
-
 
 
 li{
+    margin: auto;
     overflow: hidden;
     float: left;
-    margin-right: 25px;
-    margin-bottom: 25px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    line-height: 68px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    background-color: white;
+    border: 1px solid #85878c;
+    width: 78px;
+    height: 78px;
+    border-radius: 7px;
+    box-shadow: 5px 5px 5px #969696;
+
 }
 
 #borrar{
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
     background-color: #FF6900;
-    width: 130px;
+    width: 110px;
     margin:auto;
-    border: 5px solid;
+    border: 5px solid #969696;
     border-radius: 10px;
     height: 35px;
-    margin-top: 400px;
-    text-align: center;
+    margin-top: 382px; 
 }
 
 center{
-
     width: 800px;
     margin: 20px auto;
     border: 5px solid ;
@@ -100,8 +75,46 @@ center{
     background-color: #ffa306;
 }
 
-h1{
+
+.numero:hover{
+    background-color: #FF6900;
     color: white;
-    font-family: 'Rubik', sans-serif;
+    box-shadow:inset 3px 3px 10px 1px #AD4800;
+    text-shadow: 1px 2px 4px #5E5E5E;
+    border: 1px solid #A64602;
+  }
+  
+.signo:hover{
+    background-color: #FF6900;
+    color: white;
+    box-shadow:inset 3px 3px 10px 1px #AD4800;
+    text-shadow: 1px 2px 4px #5E5E5E;
+    border: 1px solid #A64602;
+  }
+  
+.decimal:hover{
+    background-color: #FF6900;
+    color: white;
+    box-shadow:inset 3px 3px 10px 1px #AD4800;
+    text-shadow: 1px 2px 4px #5E5E5E;
+    border: 1px solid #A64602;
+  }
+  
+.igual:hover{
+    background-color: #FF6900;
+    color: white;
+    box-shadow:inset 3px 3px 10px 1px #AD4800;
+    text-shadow: 1px 2px 4px #5E5E5E;
+    border: 1px solid #A64602;
+  }
+
+#borrar:hover{
+    background-color: #FF6900;
+    color: white;
+    box-shadow: 3px 3px 10px 1px #AD4800;
+    text-shadow: 1px 2px 4px #5E5E5E;
+    border: 3px solid #A64602;
+
 }
+
 
