--- a/Viajes.css
+++ b/Viajes.css
@@ -5,45 +5,29 @@
 }
 
 header{
-    background-color:white;
-    width: 90%;
+    width: 100%;
 	margin: 0 15%;
-    max-width: 700px; 
-    
 }
 
 
 .barra {
     background-color: #DB008D;
     width: 100%;
-	margin: 20px auto;
-        
+	margin: 20px auto;  
 }
 
-
-
-
 #nav{
-    background-color:  #DB008D;
-    width: 90%;
 	margin: 0 15% ;
     max-width: 700px; 
     padding: 10px 0px 14px 0px; 
-    font-family: 'B612', sans-serif;   
-    
+    font-family: 'B612', sans-serif;     
 }
 
-
-.cerrar{
-    background-color: greenyellow;  
-}
 
 .contenidoPrincipal{
-    background-color: blue;
     width: 90%;
 	margin: 0 15%;
     max-width: 700px; 
-    
 }
 
 .entrada{
@@ -59,14 +43,11 @@ header{
 .sidebar{
     background-color: brown;
     width: 200px ;
-    margin-left: 70%
-             
+    margin-left: 70%;         
 }
 
 .otrasEntradas{
-    background-color: white; 
-     
-    
+    background-color: white;    
 }
 
 .footerSitio{
@@ -76,23 +57,15 @@ header{
     margin-top: 60%
 }
 
-.nosotros{
-    
-    
+.nosotros{ 
 	/* margin: 50px auto; */
     max-width: 400px;   
     margin-right: 5%;
     float: left;
-
-
-
     margin: 0 15%;
 }
 
-
-
 .menu{
-    
     width: 500px;
     margin-left: 50%;
     text-align: right;
@@ -105,7 +78,7 @@ header{
 
 .copyright{
     background-color: #B10474;
-    text-align: right;
+    text-align: center;
     /* padding: 10px;
     padding-right: 17%;
     margin-top: 10%;    */
@@ -113,21 +86,18 @@ header{
     padding-right: 33%;
     margin-top: 7%;
     color: white;
-    font-size: 13px;
-     
+    font-size: 13px; 
 }
 
 a{
     text-decoration: none;
     color: white;
-    margin-right: 4%;
-    
+    margin-right: 4%;  
 }
 
 img{
     float: left;
-    margin-right: 10px;
-    
+    margin-right: 10px;   
 }
 
 p{
@@ -172,8 +142,11 @@ li {
     overflow: hidden;
 }
 
-
-
 .entrada img{
     width: 250px;
 }
+
+
+
+
+
